--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 /*
-@File: Irise Template Styles
 
 * This file contains the styling for the actual template, this
 is the file you need to edit to change the look of the template.
@@ -821,9 +820,10 @@ Navbar Area Style
 }
 
 .desktop-nav {
-    width: 100%;
     padding-top: 0;
     padding-bottom: 0;
+    padding-right: 12px;
+    padding-left: 12px;
 }
 
 .desktop-nav .navbar {
@@ -2170,14 +2170,17 @@ Banner Area Style
 @keyframes pulse {
     0% {
         transform: scale(.8);
+        opacity: 1;
     }
 
     50% {
         transform: scale(1);
+        opacity: 1;
     }
 
     100% {
         transform: scale(.8);
+        opacity: 0;
     }
 }
 
@@ -2225,12 +2228,13 @@ Banner Area Style
     /* color: #eeff00; */
     font-size: 40px;
     position: absolute;
-    margin-top: 10%;
-    margin-left: 20%;
-    max-width: 70%;
+    margin-top: 15%;
+    margin-left: 15%;
+    max-width: 80%;
     z-index: 3;
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 35px;
+    text-transform: uppercase;
     /* border-style: dashed; */
     /* border-color: rgb(255, 0, 0); */
     text-shadow: 0 0 0.1px #ffffff, 0 0 5px #0000FF;
@@ -2277,7 +2281,7 @@ Banner Area Style
     }
 }
 
-@keyframes squash-stretch {
+/* @keyframes squash-stretch {
     0% {
         transform: scaleX(1) scaleY(1);
     }
@@ -2330,14 +2334,14 @@ Banner Area Style
 }
 
 @keyframes reveal {
-    80% {
+    80% { 
         letter-spacing: 3px;
     }
 
     100% {
         background-size: 300% 300%;
     }
-}
+} */
 
 @keyframes glow {
     40% {
@@ -2346,8 +2350,10 @@ Banner Area Style
 }
 
 .banner-content h3 {
-    margin-top: 30%;
+    margin-top: 35%;
     margin-left: 450px;
+    /* margin-left: 20%; */
+    max-width: 80%;
     /* text-align: center; */
     font-size: 30px;
     /* font-weight: 400; */
@@ -2377,8 +2383,9 @@ Banner Area Style
 }
 
 .banner-content h4 {
-    margin-top: 35%;
-    margin-left: 80px;
+    margin-top: 40%;
+    margin-left: 40px;
+    max-width: 80%;
     position: absolute;
     text-align: center;
     font-size: 30px;
@@ -2716,6 +2723,9 @@ About Style
     margin-bottom: 20px;
     text-transform: uppercase;
     animation: glow 2s ease-in-out infinite alternate;
+}
+h1:hover{
+    letter-spacing:1px;
 }
 
 @keyframes glow {
@@ -6883,7 +6893,7 @@ Go To Top Style
     opacity: 1;
     /* Initial state for the animation */
     animation: fadeIn 2s ease-in-out forwards;
-    font-size: 50px;
+    font-size: 100px;
 }
 
 .inner_text .animate {
@@ -7089,7 +7099,7 @@ body {
     margin-top: 20px;
     max-width: 1000px;
     /* margin: auto auto 40px auto; */
-    text-align: left;
+    text-align: center;
 }
 
 .about-excellence .section-title p {
