--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -902,8 +902,8 @@ Navbar Area Style
 .desktop-nav {
     padding-top: 0;
     padding-bottom: 0;
-    padding-right: 12px;
-    padding-left: 12px;
+    /* padding-right: 12px;
+    padding-left: 12px; */
 }
 
 /* Navbar transition */
@@ -5605,7 +5605,7 @@ Go To Top Style
     opacity: 1;
     /* Initial state for the animation */
     animation: fadeIn 2s ease-in-out forwards;
-    font-size: 100px;
+    font-size: 200px;
 }
 
 .inner_text .animate {
