--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1125,16 +1125,14 @@ Navbar Area Style
 
 /* Navbar style 1 specific styles */
 .navbar-area.nav-style-1 {
-    padding: 0;
-    /* Remove padding from navbar style 1 */
-    /* position: absolute; */
-    /* Commented out */
-    left: 0;
-    /* Position from left for navbar style 1 */
-    right: 0;
-    /* Position from right for navbar style 1 */
-    z-index: 222;
-    /* Stack order for navbar style 1 */
+    padding: 0; /* Remove padding from navbar style 1 */
+    /* position: absolute; */ /* Commented out */
+    left: 0; /* Position from left for navbar style 1 */
+    right: 0; /* Position from right for navbar style 1 */
+    z-index: 222; /* Stack order for navbar style 1 */
+    /* Adding rounded corners */
+    border-radius: 10px; /* Adjust the radius as needed */
+    overflow: hidden; /* Ensures content inside the navbar does not overflow rounded corners */
 }
 
 /* Navbar style 1 container styles */
@@ -6351,6 +6349,7 @@ h2 .animate {
 }
 
 .inner_text .img {
+    border-radius: 10px; /* Adjust the radius as needed */
     padding: 20px, 20px, 20px, 20px;
     height: 200px;
     background-size: cover;
